# gradient-regularized-newton-boosting-trees

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
docs/: api.md  architecture.md  experiments.md  fidelity.md  math.md
experiments/: ablations.py  higgs_diagnostics.py  wine_charbonnier.py
grnbt/: __init__.py  boosting.py  datasets.py  diagnostics.py  losses.py  tree.py  utils.py
grnbt/extensions/: __init__.py  histogram_tree.py
tests/: conftest.py  test_boosting.py  test_datasets.py  test_diagnostics.py  test_extensions.py  test_losses.py  test_multiclass_boosting.py  test_multiclass_tree.py  test_tree.py  test_utils.py
