[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grnbt"
version = "0.1.0"
description = "Gradient Regularized Newton Boosting Trees — Pure Python reproduction of arXiv:2605.00581v1"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sachin", email = "sachncs@gmail.com"},
]
keywords = ["boosting", "gradient-regularized-newton", "gbdt", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
datasets = ["scikit-learn>=1.0.0"]
plot = ["matplotlib>=3.4.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "scikit-learn>=1.0.0", "matplotlib>=3.4.0"]

[project.urls]
Homepage = "https://github.com/sachn-cs/gradient-regularized-newton-boosting-trees"
Documentation = "https://github.com/sachn-cs/gradient-regularized-newton-boosting-trees/tree/main/docs"
Repository = "https://github.com/sachn-cs/gradient-regularized-newton-boosting-trees"
"Bug Tracker" = "https://github.com/sachn-cs/gradient-regularized-newton-boosting-trees/issues"
Changelog = "https://github.com/sachn-cs/gradient-regularized-newton-boosting-trees/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["grnbt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["grnbt"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
